--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "peopleperhour/yii2-cronjobs",
 	"description": "cronjobs scheduler for yii2",
 	"type": "yii2-extension",
-	"keywords": ["yii2","extension","cronjobs"],
+	"keywords": ["yii2","extension","cronjobs", "scheduler","cron"],
     "homepage": "https://github.com/peopleperhour/yii2-cronjobs",
 	"license": "BSD-3-Clause",
 	"authors": [
